# FFmpegOnAndroid

app/: build.gradle
app/src/androidTest/java/com/lijian/ffmpegonandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lijian/ffmpegonandroid/: AudioTestActivity.java  MainActivity.java  SimpleAudioPlayerActivity.java  SimpleCameraActivity.java  SimpleLibYuvActivity.java  SimpleVideoPlayerActivity.java
app/src/main/java/com/lijian/ffmpegonandroid/view/: AutoFitTextureView.java
app/src/main/res/layout/: activity_main.xml  activity_simple_camera.xml  activity_simple_video_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lijian/ffmpegonandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
videoplayer/: CMakeLists.txt  build.gradle  proguard-rules.pro
videoplayer/src/androidTest/java/com/lijian/ffmpeg/: ExampleInstrumentedTest.java
videoplayer/src/main/: AndroidManifest.xml
videoplayer/src/main/cpp/: AVPacketQueue.cpp  AVPacketQueue.h  AudioPlayer.c  AudioPlayer.h  Util.c  Util.h  VideoPlayer.h  native_audio.c  video-player.cpp
videoplayer/src/main/java/com/lijian/videoplayer/: AudioPlayer.java  VideoPlayer.java
videoplayer/src/main/java/com/lijian/videoplayer/api/audio/: AudioCapturer.java  AudioDecoder.java  AudioEncoder.java  AudioPlayer.java
videoplayer/src/main/java/com/lijian/videoplayer/api/wav/: WavFileHeader.java  WavFileReader.java  WavFileWriter.java
videoplayer/src/main/java/com/lijian/videoplayer/tester/: AudioCaptureTester.java  AudioCodecTester.java  AudioPlayerTester.java  NativeAudioTester.java  Tester.java
videoplayer/src/test/java/com/lijian/ffmpeg/: ExampleUnitTest.java
